# src/openapi/openapi.gen.yaml
@@ -4,6 +4,232 @@ info:
   description: OpenApi Spec generated by veryExpress
   version: 1.0.0
 paths:
+  /api/customer:
+    x-documentName: Customer
+    get:
+      operationId: getListCustomer
+      tags:
+        - customer
+      parameters:
+        - name: _id
+          in: query
+          required: false
+          schema:
+            type: string
+            x-format: ObjectId
+        - name: email
+          in: query
+          required: false
+          schema:
+            type: string
+            format: email
+        - name: name
+          in: query
+          required: false
+          schema:
+            type: string
+            maxLength: 64
+        - name: phone
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: active
+          in: query
+          required: false
+          schema:
+            type: boolean
+        - name: locale
+          in: query
+          required: false
+          schema:
+            type: string
+            maxLength: 8
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getCustomerResponse'
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '405':
+          description: Method Not Allowed
+        '413':
+          description: Payload Too Large
+        '429':
+          description: Too Many Requests
+        '500':
+          description: Internal Server Error
+        '502':
+          description: Bad Gateway
+        '503':
+          description: Service Unavailable
+    post:
+      operationId: postCustomer
+      tags:
+        - customer
+      parameters: []
+      requestBody:
+        description: post Customer
+        required: false
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/postCustomerBody'
+      responses:
+        '201':
+          description: Crerated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/postCustomerResponse'
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '405':
+          description: Method Not Allowed
+        '413':
+          description: Payload Too Large
+        '429':
+          description: Too Many Requests
+        '500':
+          description: Internal Server Error
+        '502':
+          description: Bad Gateway
+        '503':
+          description: Service Unavailable
+  /api/customer/{id}:
+    x-documentName: Customer
+    get:
+      operationId: getCustomer
+      tags:
+        - customer
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            x-format: ObjectId
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/getCustomerResponse'
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '405':
+          description: Method Not Allowed
+        '413':
+          description: Payload Too Large
+        '429':
+          description: Too Many Requests
+        '500':
+          description: Internal Server Error
+        '502':
+          description: Bad Gateway
+        '503':
+          description: Service Unavailable
+    patch:
+      operationId: patchCustomer
+      tags:
+        - customer
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            x-format: ObjectId
+      requestBody:
+        description: patch Customer
+        required: false
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/patchCustomerBody'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/patchCustomerResponse'
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '405':
+          description: Method Not Allowed
+        '413':
+          description: Payload Too Large
+        '429':
+          description: Too Many Requests
+        '500':
+          description: Internal Server Error
+        '502':
+          description: Bad Gateway
+        '503':
+          description: Service Unavailable
+    delete:
+      operationId: deleteCustomer
+      tags:
+        - customer
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            x-format: ObjectId
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+        '405':
+          description: Method Not Allowed
+        '413':
+          description: Payload Too Large
+        '429':
+          description: Too Many Requests
+        '500':
+          description: Internal Server Error
+        '502':
+          description: Bad Gateway
+        '503':
+          description: Service Unavailable
   /api/session:
     x-documentName: Session
   /api/session/{id}:
@@ -213,6 +439,121 @@ paths:
 components:
   securitySchemes: {}
   schemas:
+    getCustomerResponse:
+      type: object
+      properties:
+        _id:
+          type: string
+        email:
+          type: string
+          format: email
+        name:
+          type: string
+          maxLength: 64
+        phone:
+          type: string
+        active:
+          type: boolean
+          default: true
+        locale:
+          type: string
+          maxLength: 8
+    getCustomerResponseList:
+      type: array
+      items:
+        type: object
+        properties:
+          _id:
+            type: string
+          email:
+            type: string
+            format: email
+          name:
+            type: string
+            maxLength: 64
+          phone:
+            type: string
+          active:
+            type: boolean
+            default: true
+          locale:
+            type: string
+            maxLength: 8
+    postCustomerBody:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+        name:
+          type: string
+          maxLength: 64
+        phone:
+          type: string
+        active:
+          type: boolean
+          default: true
+        locale:
+          type: string
+          maxLength: 8
+      required:
+        - name
+        - active
+    postCustomerResponse:
+      type: object
+      properties:
+        _id:
+          type: string
+        email:
+          type: string
+          format: email
+        name:
+          type: string
+          maxLength: 64
+        phone:
+          type: string
+        active:
+          type: boolean
+          default: true
+        locale:
+          type: string
+          maxLength: 8
+    patchCustomerBody:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+        name:
+          type: string
+          maxLength: 64
+        phone:
+          type: string
+        active:
+          type: boolean
+          default: true
+        locale:
+          type: string
+          maxLength: 8
+    patchCustomerResponse:
+      type: object
+      properties:
+        _id:
+          type: string
+        email:
+          type: string
+          format: email
+        name:
+          type: string
+          maxLength: 64
+        phone:
+          type: string
+        active:
+          type: boolean
+          default: true
+        locale:
+          type: string
+          maxLength: 8
     getUserResponse:
       type: object
       properties:
@@ -228,6 +569,8 @@ components:
               authId:
                 type: string
               username:
+                type: string
+              password:
                 type: string
         email:
           type: string
@@ -271,6 +614,8 @@ components:
                   type: string
                 username:
                   type: string
+                password:
+                  type: string
           email:
             type: string
             format: email
@@ -308,6 +653,8 @@ components:
               authId:
                 type: string
               username:
+                type: string
+              password:
                 type: string
             required: []
         email:
@@ -353,6 +700,8 @@ components:
                 type: string
               username:
                 type: string
+              password:
+                type: string
         email:
           type: string
           format: email
@@ -390,6 +739,8 @@ components:
               authId:
                 type: string
               username:
+                type: string
+              password:
                 type: string
         email:
           type: string
@@ -430,6 +781,8 @@ components:
               authId:
                 type: string
               username:
+                type: string
+              password:
                 type: string
         email:
           type: string
