# src/server.ts
@@ -1,8 +1,7 @@
 /**
- * Generated by veryExpress@0.5.11 
+ * Generated by veryExpress@0.5.15 
  * https://github.com/Justin26l/VeryExpress
  */
-
 
 import express from 'express';
 import dotenv from 'dotenv';
@@ -80,7 +79,27 @@ async function main(): Promise<void> {
      * - list all available provider
      */
     app.get('/login', (req, res) => {
-        res.send(`<p> login with : </p>`);
+        
+        const nonce = crypto.randomBytes(16).toString("base64");
+        res.setHeader("Content-Security-Policy", `script-src 'self' 'nonce-${nonce}'`);
+        res.send(`
+            <script nonce="${nonce}" src="${process.env.APP_HOST}/js/login.js"></script>
+            <body>
+                <p>Email:</p>
+                <input type="email" id="email"/>
+                <p>Password:</p>
+                <input type="password" id="password"/>
+                <br/>
+                <br/>
+                <button id="localLoginBtn">Login</button>
+                <button id="localRegisterBtn">Register</button>
+                <br/>
+                <br/>
+                <p> login with sso : </p>
+                <p> No OAuth provider configured. </p>
+
+        </body>`);
+        
     });
 
     /**
